<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryBack"
    tools:context=".fragment.InfoFragment">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhyi_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_zhyi" />

                <TextView
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zhyi" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cha_care"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cha"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_cha" />

                <TextView
                    android:layout_marginTop="@dimen/dp_17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chayangsheng" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/solar_imag_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_jieqi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/jieqiyangs" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hour_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_time2" />

                <TextView
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeyangs" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tizhi_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/tizhiceshi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tizhiceshi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/changshi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/changshi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/changshi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vitamin_imgview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/weishengsu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weishengsupaihang" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mineral_imag_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/kuangwuzhi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kuangwuzhi" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_into"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_huge"
            android:layout_marginRight="@dimen/margin_large"
            android:background="@drawable/btn_shape2"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/intotoday"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>


</LinearLayout>